--- a/ProductManagementDemo/Repositories/Repositories.csproj
+++ b/ProductManagementDemo/Repositories/Repositories.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessObjects\DataAccessObjects.csproj" />
+  </ItemGroup>
+
 </Project>
